<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_store"
            android:title="@string/menu_cashier" />
        <item
            android:id="@+id/nav_item"
            android:icon="@drawable/ic_menu_list"
            android:title="@string/menu_item" />
        <item
            android:id="@+id/nav_customer"
            android:icon="@drawable/ic_menu_people"
            android:title="@string/menu_customer" />
        <item
            android:id="@+id/nav_receipt"
            android:icon="@drawable/ic_menu_receipt"
            android:title="@string/menu_receipt"/>
        <item
            android:id="@+id/nav_note"
            android:icon="@drawable/ic_menu_notes"
            android:title="@string/menu_note"/>
    </group>
</menu>